force-app/main/default/objects/Atempt__c/Atempt__c.object-meta.xml
<CustomObject>
    <label>Atempt</label>
    <nameField>
        <label>Atempt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>