force-app/main/default/objects/Atempt__c/fields/Atempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Atempt_Date__c</fullName>
    <label>Atempt Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>