force-app/main/default/objects/Atempt__c/fields/element__c.field-meta.xml
<CustomField>
    <fullName>element__c</fullName>
    <label>element</label>
    <referenceTo>Element__c</referenceTo>
    <relationshipLabel>Atempts</relationshipLabel>
    <relationshipName>Atempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>