force-app/main/default/objects/Atempt__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pass/completed</fullName>
                <default>true</default>
                <label>pass/completed</label>
            </value>
            <value>
                <fullName>pass/uncompleted</fullName>
            </value>
            <value>
                <fullName>pass/inProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>