force-app/main/default/objects/Atempt__c/fields/total_element__c.field-meta.xml
<CustomField>
    <fullName>total_element__c</fullName>
    <formula>element__r.certification__r.total_element__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total element</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>